--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,9 @@
 [tox]
-envlist = coverage-clean, py{27,34,35}-django{18,19,110}, coverage-report
+envlist =
+  coverage-clean
+  py{35,36,37}-django{18,19}-drf{35,36}
+  py{35,36,37}-django{110,111}-drf{35,36,37}
+  coverage-report
 skipsdist = true
 
 [testenv]
@@ -8,11 +12,18 @@ commands =
 whitelist_externals =
     coverage
 deps=
-  djangorestframework==3.5.3
-  Pillow==3.4.2
+  Pillow>=3.4.2
   django18: Django>=1.8,<1.9
   django19: Django>=1.9,<1.10
-  django110: Django>=1.10.3
+  django110: Django>=1.10,<1.11
+  django111: Django>=1.11,<2.0
+  drf35: djangorestframework>=3.5,<3.6
+  drf36: djangorestframework>=3.6,<3.7
+  drf37: djangorestframework>=3.7,<3.8
+  drf38: djangorestframework>=3.8,<3.9
+  drf39: djangorestframework>=3.9,<3.10
+  six
+  pytz
 
 [testenv:coverage-clean]
 commands = rm -f .coverage
