--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
   coverage-clean
   py{35,36,37}-django{18,19}-drf{35,36}
   py{35,36,37}-django{110,111}-drf{35,36,37}
+  py{35,36,37}-django{20,21,22}-drf{37,38,39} 
   coverage-report
 skipsdist = true
 
@@ -17,6 +18,9 @@ deps=
   django19: Django>=1.9,<1.10
   django110: Django>=1.10,<1.11
   django111: Django>=1.11,<2.0
+  django20: Django>=2.0,<2.1
+  django21: Django>=2.1,<2.2
+  django22: Django>=2.2,<2.3
   drf35: djangorestframework>=3.5,<3.6
   drf36: djangorestframework>=3.6,<3.7
   drf37: djangorestframework>=3.7,<3.8
